--- a/archive.css
+++ b/archive.css
@@ -5,8 +5,14 @@
     font-style: normal;
 }
 /* 导航栏 */
-body {
+/* body {
     font-family: exo, sans-serif;
+    margin: 0;
+    padding: 0;
+} */
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -92,7 +98,8 @@ body {
     opacity: 0; /* Hidden by default */
     transition: opacity 0.5s ease-in-out; /* Transition effect for hover */
     z-index: 10; /* Ensure it is above Bed images */
-    cursor: pointer; /* Change cursor to pointer on hover */
+    /* cursor: url('Icons/pointer.png') 16 16, auto;Change cursor to pointer on hover */
+    cursor: pointer;
 
 }
 
