--- a/index.css
+++ b/index.css
@@ -34,6 +34,11 @@ body {
     background-image: url('Icons/about.png');
 }
 
+.nav-container .game {
+    background-image: url('Icons/game.png');
+}
+
+
 .nav-container a:hover {
     transform: scale(1.10); /* Slightly enlarge the image on hover */
 }
