--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,4 +1,3 @@
-
 .nav-container {
     background-color: #ffff;
     padding: 10px 0;
@@ -37,11 +36,11 @@
     transform: scale(1.10); /* Slightly enlarge the image on hover */
 }
 
-#content {
-    /* 居中 */
-    margin: 0 auto;
-    width: 700px;
+body {
+    min-height: 150vh; /* 150% of the viewport height */
 }
+
+
 
 #content img {
     width: 100%; /* Make the image responsive */
@@ -52,7 +51,7 @@
     margin: 0 auto; /* Center the image */
 }
 
-#unity-container { position:absolute; margin-top: 200px; }
+#unity-container { position:absolute; margin-top: 250px;}
 #unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }
 #unity-container.unity-mobile { position: fixed; width: 100%; height: 100% }
 #unity-canvas { background: #231F20 }
@@ -61,7 +60,7 @@
 #unity-logo { width: 154px; height: 130px; background: url('unity-logo-dark.png') no-repeat center }
 #unity-progress-bar-empty { width: 141px; height: 18px; margin-top: 10px; margin-left: 6.5px; background: url('progress-bar-empty-dark.png') no-repeat center }
 #unity-progress-bar-full { width: 0%; height: 18px; margin-top: 10px; background: url('progress-bar-full-dark.png') no-repeat center }
-#unity-footer { position: relative }
+#unity-footer { position: relative;}
 .unity-mobile #unity-footer { display: none }
 #unity-webgl-logo { float:left; width: 204px; height: 38px; background: url('webgl-logo.png') no-repeat center }
 #unity-build-title { float: right; margin-right: 10px; line-height: 38px; font-family: arial; font-size: 18px }
