Modified the font size and the instruction size.

--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -59,8 +59,8 @@ body {
 }
 
 .Info {
-    width: 300px; /* Ensure the image is responsive within the container */
-    height: auto; /* Maintain aspect ratio */
+    width: auto; 
+    height: 40px;
 }
 /* 
 #unity-container { position:absolute; margin-top: 250px;}
