--- a/about.css
+++ b/about.css
@@ -23,7 +23,7 @@ p{
 /* 导航栏 */
 body {
     font-family:  exo, sans-serif;
-    font-size:x-large;
+    font-size:medium;
     margin: 0;
     padding: 0;
 }
